form for questions and answers

--- a/templates/question_details.html
+++ b/templates/question_details.html
@@ -15,4 +15,9 @@
          </li>
         {% endfor %}
     </ul>
+    <form method="POST" action="{% url 'answer-question' %}">
+    {% csrf_token %}
+    {{ form.as_ul }}
+     <input type="submit" value="Submit">
+     </form>
 {% endblock %}
