--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,11 @@
 </head>
 <body>
 <h1> AskPupkin Questions'n'Answers </h1>
+{% if user.is_authenticated %}
+Welcome, {{ user.username }}! <a href="{% url 'logout' %}">Logout</a>
+{% else %}
+Welcome, Guest. Please, <a href="{% url 'login' %}">login</a> or <a href="{% url 'signup' %}">signup</a>.
+{% endif %}
 {% block content %} {% endblock %}
 </body>
 </html>
